<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMenuActivity">

    <Button
        android:id="@+id/administrarUsuariosBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/administrar_usuarios_btn"
        app:layout_constraintEnd_toEndOf="@+id/administrarTarifasBtn"
        app:layout_constraintStart_toStartOf="@+id/administrarTarifasBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/administrarActivosBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/administrar_activos_btn"
        app:layout_constraintEnd_toEndOf="@+id/administrarUsuariosBtn"
        app:layout_constraintStart_toStartOf="@+id/administrarUsuariosBtn"
        app:layout_constraintTop_toBottomOf="@+id/administrarUsuariosBtn" />

    <Button
        android:id="@+id/administrarTarifasBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/administrar_tarifas_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/administrarActivosBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>